--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
 
     <application
@@ -15,12 +16,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewAdminSosiofun">
-        <activity android:name=".UI.UploadVideoActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".UI.MainActivity" />
+        <activity android:name=".UI.UploadVideoActivity" />
         <activity android:name=".UI.VideoViewActivity" />
         <activity android:name=".UI.UploadEbookActivity" />
         <activity android:name=".UI.EbookViewActivity" />
         <activity android:name=".UI.EbookActivity" />
-        <activity android:name=".UI.MainActivity">
+        <activity android:name=".UI.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
