--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.72"
     //PDF VIEWER
     implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.1'
 
