--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_adminkotak"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_admindround"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewAdminSosiofun">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".UI.BottomActivity"></activity>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".UI.MainActivity" />
         <activity android:name=".UI.UploadVideoActivity" />
         <activity android:name=".UI.VideoViewActivity" />
